--- a/style.css
+++ b/style.css
@@ -155,4 +155,7 @@ input[type="submit"] {
 	background-color: #0078e7;
 	color: white;
 }
-
+input.error {
+	border: 1px solid red;
+	border-radius: 4px;	
+}
